# simple_attendance

./: .coveragerc  .flake8  .gitignore  Makefile  README.md  alembic.ini  command_docs  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: azure-static-web-apps-delightful-bay-0a5276000.yml  ci.yml  main_sa-app.yml
api/: .gitignore  main.py
api/alembic/: env.py
api/alembic/versions/: 236203d0af2a_timezone_aware.py  3cf9d9d39228_initial.py  915c3bd34d0d_attendance_table.py  9e70b977da66_token_uniqueue.py
api/endpoints/: admin.py  employee.py  owner.py
api/models/: __init__.py  token.py
api/sa/: auth.py  db.py  depend.py  settings.py  utils.py
api/schema/: general.py
api/services/: employee_service.py
api/services/cruds/: base.py  tenant.py
api/utlis/: geo.py  sa.py
tests/: conftest.py  test_async.py  test_basic.py
web/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
web/dev-dist/: sw.js
web/src/: App.vue
web/src/components/: AdminLoginForm.vue  AttendanceTracker.vue  EmployeeAttendance.vue  EmployeeDailyAttendance.vue  EmployeeForm.vue  EmployeeList.vue  GeoMarkingList.vue  NotAllowed.vue
web/src/router/: index.js
web/src/services/: adminService.js  employeeService.js  ownerService.js
web/src/utils/: api.js  general.js
web/src/utlis/: device.js  general.js  geo.js
web/src/views/: AdminPage.vue  EmployeePage.vue
web/src/views/Admin/: AdminLayout.vue  AdminLogin.vue  EmployeePage.vue
web/src/views/Employee/: EmployeeMobile.vue  LoginPage.vue
web/src/views/Owner/: DashBoard.vue  (+1 more)
